update readme file

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -43,6 +43,7 @@
 
                     <div class="dropdown-content" id="dropdownContent">
                         <div class="dropdown-item">{{username}}</div>
+                        <div class="dropdown-item" onclick="about()">关于</div>
                         <div class="dropdown-item" onclick="logout()">退出登录</div>
                     </div>
                 </div>
@@ -64,7 +65,7 @@
                             <div class="sender-name">智能助手</div>
                         </div>
                         <div class="message-content">
-                            你好！我是智能助手，你的智能工作助手，我可以帮助你分析需求、生成测试用例、进行问题分析等，有什么我可以帮你的吗？
+                            你好！我是你的智能助手，我可以帮助你分析需求、生成测试用例、进行问题分析等，来开始我们的对话吧~
                         </div>
                     </div>
                 </div>
@@ -82,9 +83,9 @@
                 </div>
             </div>
             
-            <footer class="footer-note">
+            <!-- <footer class="footer-note">
                 © 2025 快乐生活 <a href="mailto:lzfdd937@163.com" class="email-link">lzfdd937@163.com</a>
-            </footer>
+            </footer> -->
         </main>
     </div>
 
