fixed bug & update readme file

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -37,7 +37,7 @@
                 
                 <div class="userInfo" id="userInfo">
                     <div class="user-avatar">
-                        <img class="avatar-img" src="/static/default_avatar.png" alt="用户头像">
+                        <img class="avatar-img" src="/static/images/default_avatar.png" alt="用户头像">
                     </div>
                     <div class="username">个人信息</div>
 
