rename main.py file

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -86,9 +86,9 @@
                 </div>
             </div>
             
-            <!-- <footer class="footer-note">
-                © 2025 快乐生活 <a href="mailto:lzfdd937@163.com" class="email-link">lzfdd937@163.com</a>
-            </footer> -->
+            <footer class="footer-note">
+                <p>你可以 <a href="https://github.com/ChiufungLee/FastAPI_Local_RAG" class="email-link">点击此处进入 GitHub </a>查看本项目代码</p>
+            </footer>
         </main>
         <div class="history-overlay" id="historyOverlay">
             <div class="overlay-hint">点击空白区域关闭</div>
