--- a/templates/login.html
+++ b/templates/login.html
@@ -40,8 +40,7 @@
         <a href="/register" class="register-link">没有账号？去注册</a>
         
         <div class="footer">
-            <p>© 2025 联系 <a href="mailto:lzfdd937@163.com" class="email-link">lzfdd937@163.com</a></p>
-            <p>你可以 <a href="https://github.com/ChiufungLee/FastAPI_Local_RAG" class="email-link">点击此处进入 GitHub </a>查看本项目代码</p>
+            <p>©2025 Contact With <a href="mailto:lzfdd937@163.com" class="email-link">lzfdd937@163.com</a></p>
         </div>
     </div>
 
